<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:columnOrderPreserved="true"
    android:orientation="vertical"
    android:rowCount="3"
    android:rowOrderPreserved="true">

    <android.support.v7.widget.CardView
        android:id="@+id/card_member_list_staff"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="10dp"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:background="@drawable/style_staff_card_view"
        android:clickable="true"
        android:elevation="5dp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardUseCompatPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="4">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:contentDescription="@string/img_card_member_list"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_member"
                android:tint="@color/darkGreen" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/card_member_list"
                android:textSize="@dimen/default_font_size_medium" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_book_catalog_staff"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="10dp"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:background="@drawable/style_staff_card_view"
        android:clickable="true"
        android:elevation="5dp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardUseCompatPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="4">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:contentDescription="@string/img_card_book_catalog"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_books"
                android:tint="@color/darkGreen" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/card_book_catalog"
                android:textSize="@dimen/default_font_size_medium" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_issue_books_staff"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="10dp"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:background="@drawable/style_staff_card_view"
        android:clickable="true"
        android:elevation="5dp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardUseCompatPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="4">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:contentDescription="@string/img_card_issue_books"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_open_book"
                android:tint="@color/darkGreen" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/card_issue_books"
                android:textSize="@dimen/default_font_size_medium" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_library_reports_staff"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="10dp"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:background="@drawable/style_staff_card_view"
        android:clickable="true"
        android:elevation="5dp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardUseCompatPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="4">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:contentDescription="@string/img_card_library_reports"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_report"
                android:tint="@color/darkGreen" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/card_library_reports"
                android:textSize="@dimen/default_font_size_medium" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_borrowed_books_staff"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="10dp"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:background="@drawable/style_staff_card_view"
        android:clickable="true"
        android:elevation="5dp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardUseCompatPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="4">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:contentDescription="@string/img_card_borrowed_books"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_book_shelf"
                android:tint="@color/darkGreen" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/card_borrowed_books"
                android:textSize="@dimen/default_font_size_medium" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_overdue_books_staff"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="10dp"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:background="@drawable/style_staff_card_view"
        android:clickable="true"
        android:elevation="5dp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardUseCompatPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="4">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:contentDescription="@string/img_card_overdue_books"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_overdue"
                android:tint="@color/darkGreen" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/card_overdue_books"
                android:textSize="@dimen/default_font_size_medium" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
</GridLayout>
