<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view_user_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:elevation="10dp"
    android:weightSum="2">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/login_top_frame_image"
            android:scaleType="centerCrop"
            android:contentDescription="@string/img_user_login_top_frame"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp"
            android:paddingBottom="5dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/txt_username_member_id_login"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/text_background_style"
                    android:drawableStart="@drawable/ic_user"
                    android:gravity="center_vertical"
                    android:hint="@string/prompt_user_or_id"
                    android:inputType="text"
                    android:paddingEnd="5dp"
                    android:paddingStart="15dp"
                    android:textColor="@color/grey"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:typeface="normal" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:hintEnabled="false"
                app:passwordToggleDrawable="@drawable/password_toggle_drawable"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txt_password_login"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/text_background_style"
                    android:drawableStart="@drawable/ic_password"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:paddingEnd="5dp"
                    android:paddingStart="15dp"
                    android:singleLine="false"
                    android:textColor="@color/grey"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:typeface="normal" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="80dp"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_button_main_style"
                android:text="@string/btn_sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/regular_font_size" />

            <TextView
                android:id="@+id/lnk_new_member"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onClick"
                android:text="@string/link_new_member"
                android:textAlignment="center"
                android:textSize="@dimen/default_font_size_medium" />
        </LinearLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>